[BZ #3040]

2006-08-21  Ulrich Drepper  <drepper@redhat.com>
	[BZ #3040]
	* sysdeps/unix/sysv/linux/openat.c: Fix compilation if
	__ASSUME_ATFCTS is defined.